[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "datachart"
description = "The customizable data chart creation package"
authors=[{ name = "Erik Novak" }]
maintainers = [{ name = "Erik Novak" }]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["dependencies", "version"]
keywords = ["python", "dataviz", "visualization"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics",
    "Framework :: Matplotlib",
]
requires-python = ">=3.8"

[project.urls]
Source = "https://github.com/eriknovak/datachart"
Docs = "https://github.com/eriknovak/datachart"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "python-githooks",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings[python]",
]
test = [
    "coverage",
    "nbmake",
]
all = ["datachart[dev,test]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["datachart*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "datachart.__version__" }
